package com.mdgriffin.distributedcomputingproject.common;

public enum Response {
    SUCCESS,
    ERROR,
    DENIED,
    NOT_FOUND;
}
